# depth_clustering

./: .gitignore  CMakeLists.txt
examples/ros_nodes/: CMakeLists.txt  publish_clusters_node.cpp  publish_gnd_removed_only_node.cpp  save_clusters_node.cpp  show_objects_node.cpp
examples/simple_nodes/: CMakeLists.txt  show_objects_kitti.cpp  show_objects_moosmann.cpp
include/depth_clustering/clusterers/: abstract_clusterer.h  euclidean_clusterer.h  image_based_clusterer.h
include/depth_clustering/communication/: abstract_client.h  abstract_sender.h
include/depth_clustering/ground_removal/: depth_ground_remover.h
include/depth_clustering/image_labelers/: abstract_image_labeler.h  dijkstra_image_labeler.h  hash_queue.h  linear_image_labeler.h
include/depth_clustering/image_labelers/diff_helpers/: abstract_diff.h  angle_diff.h  diff_factory.h  line_dist_diff.h  simple_diff.h
include/depth_clustering/projections/: cloud_projection.h  projection_params.h  ring_projection.h  spherical_projection.h
include/depth_clustering/qt/drawables/: drawable_cloud.h  drawable_cube.h  drawable_polygon3d.h  object_painter.h
include/depth_clustering/qt/utils/: utils.h
include/depth_clustering/qt/viewer/: viewer.h
include/depth_clustering/ros_bridge/: cloud_odom_ros_publisher.h  cloud_odom_ros_subscriber.h  cloud_ros_publisher.h
include/depth_clustering/tclap/: Arg.h  CmdLine.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  XorHandler.h  ZshCompletionOutput.h
include/depth_clustering/utils/: bbox.h  cloud.h  pose.h  rich_point.h  velodyne_utils.h
include/depth_clustering/visualization/: cloud_saver.h  visualizer.h
src/communication/: identifiable.cpp
src/ground_removal/: depth_ground_remover.cpp
src/image_labelers/: abstract_image_labeler.cpp
src/image_labelers/diff_helpers/: angle_diff.cpp  line_dist_diff.cpp
src/projections/: cloud_projection.cpp  projection_params.cpp  ring_projection.cpp  spherical_projection.cpp
src/qt/: CMakeLists.txt
src/qt/drawables/: drawable_cloud.cpp  drawable_cube.cpp  drawable_polygon3d.cpp  object_painter.cpp
src/qt/utils/: utils.cpp
src/qt/viewer/: viewer.cpp
src/qt/widgets/: base_viewer_widget.h  opengl_folder_player.cpp  opengl_folder_player.h  tabbed_widget.cpp
src/ros_bridge/: CMakeLists.txt  cloud_odom_ros_publisher.cpp  cloud_odom_ros_publisher.h  cloud_odom_ros_subscriber.cpp  cloud_ros_publisher.cpp
src/utils/: bbox.cpp  cloud.cpp  folder_reader.cpp  rich_point.cpp  velodyne_utils.cpp
src/visualization/: CMakeLists.txt  cloud_saver.cpp  visualizer.cpp
test/: helper_funcs.cpp  helper_funcs.h  test_angle_diff.cpp  test_cloud.cpp  test_cloud_projection.cpp  test_ground_remove.cpp  test_identifiable.cpp  test_image_clusterer.cpp  test_line_dist_diff.cpp  test_pose.cpp  test_proj_params.cpp  test_sender_client.cpp
